miniextendr-macros/tests/ui/fn_mut_slice_rejected.stderr
error: &mut [T] parameters are not supported at the #[miniextendr] boundary (GC safety). Use CopySliceMut<T> for safe copy-in/copy-out mutation, or Vec<T> for owned copies.
 --> tests/ui/fn_mut_slice_rejected.rs:6:24
  |
6 | fn mutate_slice(_data: &mut [i32]) {}
  |                        ^

error[E0308]: mismatched types
 --> tests/ui/fn_mut_slice_rejected.rs:6:17
  |
6 | fn mutate_slice(_data: &mut [i32]) {}
  |    ------------ ^^^^^ expected `&mut [i32]`, found `SEXP`
  |    |
  |    arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/fn_mut_slice_rejected.rs:6:4
  |
6 | fn mutate_slice(_data: &mut [i32]) {}
  |    ^^^^^^^^^^^^ -----------------
